--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <a href="Paginas/contar.html">Que cuente arturo</a>
     <br>
     <br>
-    <img src="fotos/robot.png">
+    <img src="Fotos/robot.png">
 </body>
 </html>
