--- a/Paginas/holaArturo.html
+++ b/Paginas/holaArturo.html
@@ -25,7 +25,7 @@
 
     <br>
     <br>
-    <a href="../index.html"><img src="../fotos/robot.png"></a>
+    <a href="../index.html"><img src="../Fotos/robot.png"></a>
 
 </body>
 </html>
