--- a/index.html
+++ b/index.html
@@ -5,17 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript</title>
+    <script src="js/miarchivojs.js"></script>
 </head>
 <body>
     <h1>Hola Humano!!</h1>
+    <img src="Fotos/robot.png" width="10%" height="10%">
     <p>Yo soy R2-D2 mas conocido como Arturito, voy a acompañarte en esta primera parte hasta que seas un experto en JavaScript, para empezar vamos con algo sencillo que lo solicitan los docentes de Coderhouse.</p>
-    <p>Selecciona la Opcion que desees para empezar.</p>
+    <p>Vamos a calcular algunos precios, selecciona como queres comprar el producto</p>
+    <img src="fotos/ring.jpg" width="15%" height="15%">
+    <h2>PRECIO $15.000</h2>
 
-    <a href="Paginas/suma.html">Suma Con Arturito</a>
-    <a href="Paginas/holaArturo.html">Sauda a Arturito</a>
-    <a href="Paginas/contar.html">Que cuente arturo</a>
     <br>
     <br>
-    <img src="Fotos/robot.png">
+    <button onclick="mostrarIva()"> Mostrar IVA</button>
+    <button onclick="calculoCuotas()"> Si quiero el producto en cuotas</button>
+    <button onclick="prestamista()"> Necesito plata</button>
+    <br>
+    <br>
 </body>
 </html>
