--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <img src="Fotos/robot.png" width="10%" height="10%">
     <p>Yo soy R2-D2 mas conocido como Arturito, voy a acompañarte en esta primera parte hasta que seas un experto en JavaScript, para empezar vamos con algo sencillo que lo solicitan los docentes de Coderhouse.</p>
     <p>Vamos a calcular algunos precios, selecciona como queres comprar el producto</p>
-    <img src="fotos/ring.jpg" width="15%" height="15%">
+    <img src="Fotos/ring.jpg" width="15%" height="15%">
     <h2>PRECIO $15.000</h2>
 
     <br>
