--- a/index.html
+++ b/index.html
@@ -5,22 +5,81 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css" media="screen" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="js/miarchivojs.js"></script>
 </head>
 <body>
-    <h1>Hola Humano!!</h1>
-    <img src="Fotos/robot.png" width="10%" height="10%">
-    <p>Yo soy R2-D2 mas conocido como Arturito, voy a acompañarte en esta primera parte hasta que seas un experto en JavaScript, para empezar vamos con algo sencillo que lo solicitan los docentes de Coderhouse.</p>
-    <p>Vamos a calcular algunos precios, selecciona como queres comprar el producto</p>
-    <img src="Fotos/ring.jpg" width="15%" height="15%">
-    <h2>PRECIO $15.000</h2>
-
-    <br>
-    <br>
-    <button onclick="mostrarIva()"> Mostrar IVA</button>
-    <button onclick="calculoCuotas()"> Si quiero el producto en cuotas</button>
-    <button onclick="prestamista()"> Necesito plata</button>
-    <br>
-    <br>
+    <div class="container">
+        <div class="row py-4">
+            <div class="col-md-3">
+                <img src="Fotos/robot.png" width="70%">                
+            </div>
+            <div class="col-md-9 py-5">
+                <h1>Hola Humano!!</h1>
+            </div>
+        </div>
+        <div class="row">
+                <p>Yo soy R2-D2 mas conocido como Arturito, hoy me vine para argentina y estoy vendiendo mates (hay que llegar a fin de mes)...</p>
+                <p>Estos son algunos modelos de los mates y sus precios</p>
+                <p style="font-weight: 700;">Por consola se puede ver el array de los cuatro mates</p>
+        </div>
+    
+        <div class="row">
+            <div class="col-md-12">
+                <div class="row">
+                    <div class="card" style="width: 18rem;">
+                        <img src="Fotos/mateAlpaca.jpg" class="card-img-top" style="width: 70%;">
+                        <div class="card-body">
+                        <h5 class="card-title">Mate Alpaca</h5>
+                        <p class="card-text">Valor: $1500</p>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                        <li class="list-group-item"><button onclick="mostrarIva()"> Mostrar IVA</button></li>
+                        <li class="list-group-item"><button onclick="prestamista()"> Necesito plata</button></li>
+                        <!-- <li class="list-group-item"><button onclick="calculoCuotas()">Stock</button></li> -->
+                        </ul>
+                    </div>
+                    <div class="card" style="width: 18rem;">
+                        <img src="Fotos/mateCuerno.jpg" class="card-img-top" style="width: 60%;">
+                        <div class="card-body">
+                        <h5 class="card-title">Mate Cuerno</h5>
+                        <p class="card-text">Valor: $800</p>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                        <li class="list-group-item"><button onclick="mostrarIva()"> Mostrar IVA</button></li>
+                        <li class="list-group-item"><button onclick="prestamista()"> Necesito plata</button></li>
+                        <!-- <li class="list-group-item"><button onclick="calculoStock()">Stock</button></li> -->
+                        </ul>
+                    </div>
+                    <div class="card" style="width: 18rem;">
+                        <img src="Fotos/mateTapa.jpg" class="card-img-top" style="width: 80%;">
+                        <div class="card-body">
+                        <h5 class="card-title">Mate Tapa</h5>
+                        <p class="card-text">Valor: $3000</p>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                        <li class="list-group-item"><button onclick="mostrarIva()"> Mostrar IVA</button></li>
+                        <li class="list-group-item"><button onclick="prestamista()"> Necesito plata</button></li>
+                        <!-- <li class="list-group-item"><button onclick="calculoStock()">Stock</button></li> -->
+                        </ul>
+                    </div>
+                    <div class="card" style="width: 18rem;">
+                        <img src="Fotos/mateUru.png" class="card-img-top" style="width: 75%;">
+                        <div class="card-body">
+                        <h5 class="card-title">Mate Uruguayo</h5>
+                        <p class="card-text">Valor: $1000</p>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                        <li class="list-group-item"><button onclick="mostrarIva()"> Mostrar IVA</button></li>
+                        <li class="list-group-item"><button onclick="prestamista()"> Necesito plata</button></li>
+                        <!-- <li class="list-group-item"><button onclick="calculoStock()">Stock</button></li> -->
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
