--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <p class="card-text">Valor: $1500</p>
                         </div>
                         <ul class="list-group list-group-flush">
-                        <li class="list-group-item"><button onclick="mostrarIva()"> Mostrar IVA</button></li>
+                        <li class="list-group-item"><button onclick="descontar()"> Mostrar IVA</button></li>
                         <li class="list-group-item"><button onclick="prestamista()"> Necesito plata</button></li>
                         <!-- <li class="list-group-item"><button onclick="calculoCuotas()">Stock</button></li> -->
                         </ul>
