--- a/index.html
+++ b/index.html
@@ -8,16 +8,14 @@
     <link rel="stylesheet" type="text/css" href="css/main.css" media="screen" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <script src="js/miarchivojs.js"></script>
 </head>
-<body>
+<body onload="cambiar_saludos()">
     <div class="container">
         <div class="row py-4">
             <div class="col-md-3">
                 <img src="Fotos/robot.png" width="70%">                
             </div>
             <div class="col-md-9 py-5">
-                <h1>Hola Humano!!</h1>
             </div>
         </div>
         <div class="row">
@@ -81,5 +79,7 @@
             </div>
         </div>
     </div>
+
+    <script src="js/miarchivojs.js"></script>
 </body>
 </html>
