--- a/index.html
+++ b/index.html
@@ -23,7 +23,23 @@
                 <p>Estos son algunos modelos de los mates y sus precios</p>
                 <p style="font-weight: 700;">Por consola se puede ver el array de los cuatro mates</p>
         </div>
-    
+        <div class="row">
+            <p>estamos aprendiendo cosas nuevas, por eso te dejo una pequeña calculadora utilizando eventos</p>
+            <form name="calculadora"> 
+                <!-- Se utiliza la opcion 3 de sintaxis de eventos ya que me parecio la mas simple para aplicar en este caso -->
+                <input type="Text" name="operando1" value="0" size="12"> 
+                <br> 
+                <input type="Text" name="operando2" value="0" size="12"> 
+                <br> 
+                <input type="Button" name="" value=" + " onclick="calcula('+')"> 
+                <input type="Button" name="" value=" - " onclick="calcula('-')"> 
+                <input type="Button" name="" value=" X " onclick="calcula('*')">  
+                <br> 
+                <input type="Text" name="resultado" value="0" size="12"> 
+                <br>
+                </form>
+            </div>
+            <br>
         <div class="row">
             <div class="col-md-12">
                 <div class="row">
