--- a/index.html
+++ b/index.html
@@ -24,8 +24,19 @@
           </div>
     </div>
 
-    
-    <div class="table-responsive">
+<div class="row tituloCarrito" >Agregar Opinion</div>
+
+<form action="" id="form" class="row d-flex flex-column align-items-center  mt-4 mb-4">
+  <input class="mb-2 col-6" id="nombre" type="text" placeholder="Nombre">
+  <input class="mb-2 col-6" id="puntaje" type="text" placeholder="Puntaje del 1 al 10">
+  <textarea class="mb-2 col-6" name=""  placeholder="Opiniones" id="opinion" cols="30" rows="3"></textarea>
+  <button type="submit" id="btn-create" class="btn btn-success col-3">Enviar Opinion</button>
+</form>
+
+<section id="containerOpiniones" class="row"></section>
+
+
+    <div class="table-responsive py-3">
       <table id="tablaCarrito" class="table table-striped table-sm">
         <p class="tituloCarrito">CARRITO DE COMPRAS</p>
 
