--- a/index.html
+++ b/index.html
@@ -11,21 +11,15 @@
   </head>
   
 <body onload="cambiar_saludos()" class="bg">
-  <!-- NAVBAR -->
-  <header class="bd-header bg-dark py-3 d-flex align-items-stretch border-bottom border-dark">
-    <div class="container-fluid d-flex align-items-center">
-      <h1 class="d-flex align-items-center fs-4 text-white mb-0">
-        <img src="src/media/mate.png" width="38" height="30" class="me-3" alt="">            
-      </h1>
-    </div>
-  </header>
+
+  <div id="nav"></div>
+
   <div class="container">
     <div class="saludo"></div>
     <div class="container py-3">
           <div class="row" id="cartaProducto">
           </div>
     </div>
-    
     
 <div class="row tituloCarrito" >Agregar Opinion</div>
 
@@ -37,7 +31,6 @@
 </form>
 
 <section id="containerOpiniones" class="row"></section>
-
 
     <div class="table-responsive py-3">
       <table id="tablaCarrito" class="table table-striped table-sm">
