--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <div class="table-responsive py-3">
       <table id="tablaCarrito" class="table table-striped table-sm">
         <p class="tituloCarrito">CARRITO DE COMPRAS</p>
-
         <div id="listaCarrito"></div>
+        <div id="precioFinal"></div>
     </div>
   </div>
 
