--- a/index.html
+++ b/index.html
@@ -8,37 +8,43 @@
     <link rel="stylesheet" type="text/css" href="src/css/style.css" media="screen"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   
 <body onload="cambiar_saludos()" class="bg">
 
-  <div id="nav"></div>
+<!-- Navbar -->
+<div id="nav"></div>
 
-  <div class="container">
-    <div class="saludo"></div>
-    <div class="container py-3">
-          <div class="row" id="cartaProducto">
-          </div>
-    </div>
-    
-<div class="row tituloCarrito" >Agregar Opinion</div>
-
-<form action="" id="form" class="row d-flex flex-column align-items-center  mt-4 mb-4">
-  <input class="mb-2 col-6" id="nombre" type="text" placeholder="Nombre">
-  <input class="mb-2 col-6" id="puntaje" type="text" placeholder="Puntaje del 1 al 10">
-  <textarea class="mb-2 col-6" name=""  placeholder="Opiniones" id="opinion" cols="30" rows="3"></textarea>
-  <button type="submit" id="btn-create" class="btn btn-success col-3">Enviar Opinion</button>
-</form>
-
-<section id="containerOpiniones" class="row"></section>
-
-    <div class="table-responsive py-3">
-      <table id="tablaCarrito" class="table table-striped table-sm">
-        <p class="tituloCarrito">CARRITO DE COMPRAS</p>
-        <div id="listaCarrito"></div>
-        <div id="precioFinal"></div>
-    </div>
+<!-- Pagina completa -->
+<div class="container">
+  
+  <!-- Carrito (para posicionar en el navbar despues) -->
+  <div id="carrito">
+      <div id="listaCarrito"></div>
+      <div id="precioFinal"></div>
   </div>
+
+  <!-- Saludo dinamico -->
+  <div class="saludo"></div>
+  
+  <!-- Las cartas de los productos -->
+  <div class="container py-3">
+    <div class="row" id="cartaProducto"></div>
+  </div>
+
+  <!-- Opinion -->
+  <div class="row tituloCarrito">Agregar Opinion</div>
+    <form action="" id="form" class="row d-flex flex-column align-items-center  mt-4 mb-4">
+      <input class="mb-2 col-6" id="nombre" type="text" placeholder="Nombre">
+      <input class="mb-2 col-6" id="puntaje" type="text" placeholder="Puntaje del 1 al 10">
+      <textarea class="mb-2 col-6" name=""  placeholder="Opiniones" id="opinion" cols="30" rows="3"></textarea>
+      <button type="submit" id="btn-create" class="btn btn-success col-3">Enviar Opinion</button>
+    </form>
+    <section id="containerOpiniones" class="row"></section>
+
+</div>
+
 
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
